mansion image spacing correction to 1em

--- a/main.css
+++ b/main.css
@@ -258,7 +258,7 @@ main {
     float: start;
     align-items: end;
     margin-right: .7em;
-    margin-top: .5em;
+    margin-top: 1em;
 } 
 
 .mansion_text {
